--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,9 @@ pinocchio==0.4.3
 factory-boy==3.2.1
 
 # Code Coverage
-coverage==7.1.0
-codecov==2.1.12
+# coverage  # Requires-Python >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, <3.7
+# codecov  # Requires-Python >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, <3.7
+nose
 
 # Utilities
 httpie==3.2.1
