--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 # Pin dependancies that might cause breakage
-Werkzeug
+Werkzeug==2.2.2
 
 # Build dependencies
-Flask
-Flask-SQLAlchemy
-psycopg2-binary
-python-dotenv
+Flask==2.2.2
+Flask-SQLAlchemy==3.0.2
+psycopg2-binary==2.9.5
+python-dotenv==0.21.1
 
 # Runtime dependencies
-gunicorn
-honcho
+gunicorn==20.1.0
+honcho==1.1.0
 
 # Code quality
-pylint
-flake8
-black
+pylint==2.15.10
+flake8==6.0.0
+black==22.3.0
 
 # Testing dependencies
-nose
-pinocchio
-factory-boy
+nose==1.3.7
+pinocchio==0.4.3
+factory-boy==3.2.1
 
 # Code Coverage
 # coverage  # Requires-Python >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, <3.7
@@ -27,8 +27,4 @@ factory-boy
 nose
 
 # Utilities
-httpie
-
-# Security
-Flask-Talisman
-Flask-Cors
+httpie==3.2.1
